--- a/style.css
+++ b/style.css
@@ -52,44 +52,68 @@
 
 .section {
     background-color: rgb(0, 221, 221);
-    display: flex;
+    display: grid;
     grid-gap: 3rem;
-    align-items: flex-start;
+    /*grid-row: 1 / 3;
+    grid-column: 1 / 5;*/
+    /*grid-column: 1/3;*/
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    /*align-items: flex-start;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap;*/
 }
 
 .img1{
     margin-top: 2rem;
     margin-left: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img2{
     margin-top: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img3{
     margin-top: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img4{
     margin-top: 2rem;
+    margin-right: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img5{
-    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img6{
-    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img7{
-    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 .img8{
-    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    border-width: 6px;
+    border-style: solid;
 }
 
 a {
