--- a/style.css
+++ b/style.css
@@ -47,71 +47,102 @@
 .aside {
     margin-left: 4rem;
     background-color: rgb(0, 126, 42);
-    padding: 4rem;
+    padding: 5rem;
+    margin-bottom: 4rem;
 }
 
 .section {
     background-color: rgb(0, 221, 221);
     display: grid;
-    grid-gap: 3rem;
+    grid-gap: 4rem;
     /*grid-row: 1 / 3;
     grid-column: 1 / 5;*/
     /*grid-column: 1/3;*/
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    margin-right: 4rem;
+    margin-bottom: 4rem;
     /*align-items: flex-start;
     justify-content: space-between;
     flex-wrap: wrap;*/
 }
 
-.img1{
-    margin-top: 2rem;
+.art1 {
+    margin-top: 4rem;
+    margin-left: 4rem;
+}
+
+.img1 {
+    border-width: 6px;
+    border-style: solid;
+}
+
+.art2 {
+    margin-top: 4rem;
     margin-left: 2rem;
+}
+
+.img2 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img2{
-    margin-top: 2rem;
+.art3 {
+    margin-top: 4rem;
+    margin-left: 1rem;
+}
+
+.img3 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img3{
-    margin-top: 2rem;
+.art4 {
+    margin-top: 4rem;
+    margin-right: 4rem;
+}
+
+.img4 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img4{
-    margin-top: 2rem;
-    margin-right: 2rem;
+.art5 {
+    margin-bottom: 4rem;
+    margin-left: 4rem;
+}
+
+.img5 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img5{
-    margin-bottom: 2rem;
+.art6 {
+    margin-bottom: 4rem;
     margin-left: 2rem;
+}
+
+.img6 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img6{
-    margin-bottom: 2rem;
+.art7 {
+    margin-bottom: 4rem;
+    margin-left: 1rem;
+}
+
+.img7 {
     border-width: 6px;
     border-style: solid;
 }
 
-.img7{
-    margin-bottom: 2rem;
-    border-width: 6px;
-    border-style: solid;
+.art8 {
+    margin-bottom: 4rem;
+    margin-right: 4rem;
 }
 
-.img8{
-    margin-bottom: 2rem;
-    margin-right: 2rem;
+.img8 {
     border-width: 6px;
     border-style: solid;
 }
@@ -119,4 +150,8 @@
 a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(255, 230, 0);
+}
+
+h4 {
+    margin-left: 26px;
 }
