--- a/style.css
+++ b/style.css
@@ -39,119 +39,66 @@
 }
 
 .div {
-    margin-top: 4rem;
+    padding: 4rem;
     display: flex;
     grid-gap: 4rem;
 }
 
 .aside {
-    margin-left: 4rem;
+    /*margin-left: 4rem;*/
     background-color: rgb(0, 126, 42);
-    padding: 5rem;
-    margin-bottom: 4rem;
+    padding-inline: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .section {
     background-color: rgb(0, 221, 221);
     display: grid;
     grid-gap: 4rem;
-    /*grid-row: 1 / 3;
-    grid-column: 1 / 5;*/
-    /*grid-column: 1/3;*/
+    padding: 4rem;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    margin-right: 4rem;
-    margin-bottom: 4rem;
-    /*align-items: flex-start;
-    justify-content: space-between;
-    flex-wrap: wrap;*/
+    /*margin-right: 4rem;
+    margin-bottom: 4rem;*/
 }
 
-.art1 {
-    margin-top: 4rem;
-    margin-left: 4rem;
+.art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.img1 {
+.img {
     border-width: 6px;
     border-style: solid;
 }
 
-.art2 {
-    margin-top: 4rem;
-    margin-left: 2rem;
-}
-
-.img2 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art3 {
-    margin-top: 4rem;
-    margin-left: 1rem;
-}
-
-.img3 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art4 {
-    margin-top: 4rem;
-    margin-right: 4rem;
-}
-
-.img4 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art5 {
-    margin-bottom: 4rem;
-    margin-left: 4rem;
-}
-
-.img5 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art6 {
-    margin-bottom: 4rem;
-    margin-left: 2rem;
-}
-
-.img6 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art7 {
-    margin-bottom: 4rem;
-    margin-left: 1rem;
-}
-
-.img7 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-.art8 {
-    margin-bottom: 4rem;
-    margin-right: 4rem;
-}
-
-.img8 {
-    border-width: 6px;
-    border-style: solid;
-}
-
-a {
+.menu_options {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(255, 230, 0);
+    color: rgb(82, 0, 177);
 }
 
-h4 {
-    margin-left: 26px;
+.list_options {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(219, 124, 0);
+}
+
+.item_description {
+    text-align: center;
+}
+
+footer {
+    background-color: blueviolet;
+    display: grid;
+    padding: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.interes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
