--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     width: calc(100% - 12rem);
     min-height: 100dvh;
     margin-inline: auto;
-    background-color: rgb(12, 108, 121);
+    background-color: rgb(121, 61, 12);
 }
 
 .header {
-    background-color: rgb(167, 123, 83);
+    background-color: #50AFBE;
     border-radius: 2rem;
     border-style: solid;
     border-color: blanchedalmond;
@@ -24,18 +24,23 @@
 .empresa {
     font-size: 4rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(114, 31, 31);
+    color: #BE5F50;
 }
 
 .navegacion {
     margin-top: 2rem;
-    background-color: rgb(255, 102, 0);
+    background-color: #FF722E;
     border-radius: 5rem;
     border-style: solid;
-    border-color: rgb(172, 63, 0);
+    border-color: rgb(194, 71, 0);
     display: flex;
     justify-content: space-evenly;
     
+}
+
+.menu_options {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #2EBBFF;
 }
 
 .div {
@@ -45,23 +50,32 @@
 }
 
 .aside {
-    /*margin-left: 4rem;*/
-    background-color: rgb(0, 126, 42);
-    padding-inline: 5rem;
+    background-color: #2FA250;
+    border-radius: 1rem;
+    border-style:double;
+    border-width: 1rem;
+    border-color: #fa4747;
     display: flex;
+    padding-inline: 5rem;
     flex-direction: column;
     justify-content: center;
 }
 
+.list_options {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #A22F82;
+}
+
 .section {
-    background-color: rgb(0, 221, 221);
+    background-color: #DB5253;
+    border-radius: 1rem;
+    border-style:outset;
+    border-width: 5px;
     display: grid;
     grid-gap: 4rem;
     padding: 4rem;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    /*margin-right: 4rem;
-    margin-bottom: 4rem;*/
 }
 
 .art {
@@ -75,22 +89,17 @@
     border-style: solid;
 }
 
-.menu_options {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(82, 0, 177);
-}
-
-.list_options {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(219, 124, 0);
-}
-
 .item_description {
     text-align: center;
+    color: #52DBDA;
+}
+
+.item_name {
+    color: #52DBDA;
 }
 
 footer {
-    background-color: blueviolet;
+    background-color: #693EFE;
     display: grid;
     padding: 1rem;
     grid-template-columns: repeat(5, 1fr);
@@ -100,5 +109,21 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+}
+
+.interes:not(.dev) {
     justify-content: space-evenly;
+}
+
+.footer_texts:not(h3) {
+    color: rgb(169, 255, 72);
+}
+
+.footer_texts:not(h2) {
+    color: #D3FE3E;
+}
+
+.footer_links {
+    color: #D3FE3E;
 }
